--- a/templates/components/comp.hbs
+++ b/templates/components/comp.hbs
@@ -31,7 +31,7 @@
 		{{/if~}}
 
 		<div class="comp-body">
-			{{#if (test system "&&" system.bgImg)}}<img src="{{system.bgImg}}" />
+			{{#if (test system "&&" system.bgImg)}}<img class="comp-img" src="{{system.bgImg}}" />
 			{{else}}{{#if img}}<img class="comp-img" src="{{img}}" />{{/if}}{{/if}}
 			{{#if name}}<div class="comp-title shadowed">{{name}}</div>{{/if}}
 			{{#if (test system "&&" system.rules)}}<div class="comp-body-text shadowed">{{{system.rules}}}</div>{{/if}}
@@ -43,9 +43,23 @@
 					{{> "systems/eunos-blades/templates/parts/dotline.hbs" }}
 				{{/each}}
 			{{/if}}
-			{{#if toggle}}
-			<input class="comp-toggle" type="checkbox" data-dtype="Boolean" name="{{toggle}}" value="{{value}}" {{checked value}}/>
+			{{#if checkControl}}
+			<input class="comp-control comp-hidden-control comp-check" type="checkbox" data-dtype="Boolean" name="{{checkControl}}" value="{{checkValue}}" {{checked checkValue}}/>
 			{{/if}}
+			{{#if radioControl}}
+			<div class="comp-control comp-hidden-control comp-radio">
+			{{#with radioControl as |control|}}{{#each control.values}}
+				<input type="radio" name="{{control.target}}" value="{{value}}" {{~#if (test control.value "==" value)}} checked="checked"{{/if}}>
+				<label class="comp-radio-label">{{label}}</label>
+			{{/each}}{{/with}}
+			</div>
+			{{/if}}
+			{{#if numberCircle}}
+			<div class="number-circle {{~#if numberCircleClass}} {{numberCircleClass}}{{/if}}">{{numberCircle}}</div>
+			{{/if}}
+			{{#each numberCircles as |value circleClass|}}
+			<div class="number-circle {{~#if circleClass}} {{circleClass}}{{/if}}">{{value}}</div>
+			{{/each}}
 		</div>
 
 		{{#if tooltip}}
