--- a/templates/components/comp.hbs
+++ b/templates/components/comp.hbs
@@ -72,6 +72,11 @@
 			<i class="fas fa-trash"></i>
 		</a>
 		{{/if}}
+		{{#if remFullButton}}
+		<a class="comp-control comp-delete-full" title="{{localize 'BITD.TitleDeleteItem'}}">
+			<i class="fas fa-trash"></i>
+		</a>
+		{{/if}}
 
 	{{else}}
 
