--- a/templates/items/clock_keeper-sheet.hbs
+++ b/templates/items/clock_keeper-sheet.hbs
@@ -1,6 +1,7 @@
 <form class="{{cssClass}}" autocomplete="off">
-	<section class="item-top flex-horizontal">
-		<input class="comp-title sheet-title shadowed" type="text" value="{{item.name}}" readonly />
+	<section class="sheet-top">
+		<img class="sheet-img" src="{{item.img}}" data-edit="img" title="{{item.name}}" />
+		<input class="comp-title sheet-title shadowed" type="text" name="name" value="{{item.name}}" placeholder="{{localize 'BITD.Name'}}" />
 	</section>
 	<section class="item-main main">
 		<div class="scene-selection">
