--- a/templates/items/playbook-sheet.hbs
+++ b/templates/items/playbook-sheet.hbs
@@ -1,9 +1,11 @@
 
 <form class="{{cssClass}}" autocomplete="off">
-	<section class="item-top flex-horizontal">
-		<img src="{{item.img}}" data-edit="img" title="{{item.name}}"/>
+
+	<section class="sheet-top">
+		<img class="sheet-img" src="{{item.img}}" data-edit="img" title="{{item.name}}" />
 		<input class="comp-title sheet-title shadowed" type="text" name="name" value="{{item.name}}" placeholder="{{localize 'BITD.Name'}}" />
 	</section>
+
 	<section class="item-main flex-vertical">
 		<label class="tab-label">
 			<span class="tab-title">Rules</span>
