--- a/templates/crew-sheet.hbs
+++ b/templates/crew-sheet.hbs
@@ -7,7 +7,7 @@
 	</div>
 
 	{{!-- Playbook XP --}}
-	{{#if playbookData}}
+	{{#if items.playbook}}
 		{{> "systems/eunos-blades/templates/components/comp.hbs"
 			class="comp-xp comp-xp-playbook comp-horizontal comp-teeth comp-teeth-long"
 			dotline=playbookData.dotline
