--- a/templates/actor-sheet.hbs
+++ b/templates/actor-sheet.hbs
@@ -7,7 +7,7 @@
 	</div>
 
 	{{!-- Playbook XP --}}
-	{{#if playbookData}}
+	{{#if items.playbook}}
 		{{> "systems/eunos-blades/templates/components/comp.hbs"
 			class="comp-xp comp-xp-playbook comp-horizontal comp-teeth comp-teeth-long"
 			dotline=playbookData.dotline
@@ -88,7 +88,6 @@
 		}}
 
 		{{> "systems/eunos-blades/templates/components/comp.hbs"
-			class="comp-trauma-conditions comp-vertical"
 			compContainer=traumaData.compContainer
 		}}
 
