--- a/templates/dialog.hbs
+++ b/templates/dialog.hbs
@@ -16,19 +16,22 @@
 		{{!-- Tabs --}}
 		{{#each tabs as |tabData tabName|}}
 		<div class="tab flex-horizontal flex-wrap {{~#unless (test (count ../tabs) ">" 1)}} active{{/unless}}" data-tab="{{@index}}">
-				<div class="featured-items">
-					{{#each tabData.featured as |item|}}
-						<div class="comp comp-vertical long-text">
-							<div class="comp-body" data-item-id="{{item._id}}">
-								<img src="{{item.img}}" />
-								<div class="comp-title shadowed">{{item.name}}</div>
-								{{#if item.system.load}}
-								<div class="number-circle">{{item.system.load}}</div>
-								{{/if}}
-							</div>
-						</div>
-					{{/each}}
+			{{#each tabData.featured as |item|}}
+				<div class="comp comp-vertical long-text featured-item">
+					<div class="comp-body" data-item-id="{{item._id}}">
+						<img src="{{item.img}}" />
+						<div class="comp-title shadowed">{{item.name}}</div>
+						{{#if item.system.load}}
+						<div class="number-circle">{{item.system.load}}</div>
+						{{/if}}
+					</div>
+					{{#if item.tooltip}}
+					<div class="comp-tooltip item-details">
+						{{{item.tooltip}}}
+					</div>
+					{{/if}}
 				</div>
+			{{/each}}
 
 			{{#each tabData.other as |item|}}
 			<div class="comp comp-vertical long-text">
@@ -39,6 +42,11 @@
 					<div class="number-circle">{{item.system.load}}</div>
 					{{/if}}
 				</div>
+				{{#if item.tooltip}}
+				<div class="comp-tooltip item-details">
+					{{{item.tooltip}}}
+				</div>
+				{{/if}}
 			</div>
 			{{/each}}
 
